# sam3d-body-comfyUI-camshottoolkit

./: README.md  __init__.py  install.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
nodes/: __init__.py  base.py  comfy-env.toml  lazy_import.py  runtime_deps.py
nodes/processing/: __init__.py  glb_export.py  load_model.py  mesh_renderer.py  process.py  save_meshes.py  visualize.py
nodes/sam_3d_body/visualization/: renderer.py
web/: ArcballControls.js  sam3d_offset_view.js  viewer_sam3d_offset.html
