[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3d-camshot-toolkit"
version = "0.1.3"
description = "Minimal SAM3D body reconstruction toolkit for calibrated camera-shot workflows in ComfyUI."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/EnviralDesign/sam3d-body-comfyUI-camshottoolkit"
Documentation = "https://github.com/EnviralDesign/sam3d-body-comfyUI-camshottoolkit#readme"
"Bug Tracker" = "https://github.com/EnviralDesign/sam3d-body-comfyUI-camshottoolkit/issues"

[tool.comfy]
PublisherId = "enviral-design"
DisplayName = "SAM3D Cam Shot Toolkit"
